SERVER-30878: Adapt mongo-rocks interface to accommodate timestamped writes API.